Criação do método upsert
